added comments for code readability
